--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
                 <img src="./image/home/Ellipse 1.png" alt="">
                 <h2>Creative <span>Visual</span> Design</h2>
             </div>
-            <div class="header__nav">
+                <div class="header__nav">
                 <ul>
                         <li><a href="">HOME</a></li>
                         <li><a href="">ABOUT</a></li>
@@ -23,8 +23,13 @@
                         <li><a href="">UPDATES</a></li>
                         <li><a href="">CONTACT</a></li>
                 </ul>
+             </div>
+             <div class="toggle__menu">
+                <span></span>
+                <span></span>
+                <span></span>
+             </div>
             </div>
-        </div>
         </div>
     </header>
 
