--- a/home.html
+++ b/home.html
@@ -17,11 +17,11 @@
             </div>
                 <div class="header__nav">
                 <ul>
-                        <li><a href="">HOME</a></li>
-                        <li><a href="">ABOUT</a></li>
-                        <li><a href="">SERVICES</a></li>
-                        <li><a href="">UPDATES</a></li>
-                        <li><a href="">CONTACT</a></li>
+                        <li><a href="">Home</a></li>
+                        <li><a href="">About</a></li>
+                        <li><a href="">Services</a></li>
+                        <li><a href="">Updates</a></li>
+                        <li><a href="">Contact</a></li>
                 </ul>
              </div>
              <div class="toggle__menu">
@@ -33,5 +33,41 @@
         </div>
     </header>
 
+    <section class="banner">
+        <div class="container">
+            <div class="banner__wrapper">
+                <div class="banner__text">
+                   <h1>Creative Visual Design</h1> 
+                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, impedit cum necessitatibus cumque consequatur excepturi nisi aliquam, voluptatibus facere similique ad in id eius odio harum saepe praesentium, totam fugiat voluptas. Necessitatibus sunt excepturi quos repellat magnam officiis similique quisquam!</p>
+                   <a id="banner__btn"href=""class="btn bg--yellow">explore more</a>
+            </div>
+            <img src="./image/home/Hero.png" alt="">
+        </div>
+    </div>
+    </section>
+
+    <section class="about">
+        <div class="container">
+            <div class="about__wrapper">
+                <div class="elp">
+                    <img class="pic" src="./image/home/Ellipse 1.png">
+                    <img src="./image/home/unsplash_GIy2ly37Kw8.png">
+                </div>
+                <div class="about__text">
+                    <h3> About Me</h3>
+                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis ullam placeat, nemo consectetur vel ex 
+                        earum eius sit adipisci culpa ipsam commodi totam eum 
+                        iure aut reprehenderit tempora eaque quis eveniet minima. 
+                        Beatae molestiae voluptatem enim explicabo pariatur vitae. Est?</p>
+                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis ullam placeat, nemo consectetur vel ex 
+                        earum eius sit adipisci culpa ipsam commodi totam eum 
+                        iure aut reprehenderit tempora eaque quis eveniet minima. 
+                        Beatae molestiae voluptatem enim explicabo pariatur vitae. Est?
+                    </p>
+                </div>
+            </div>     
+        </div>
+    </section>
+<script src="./script.js"></script>
 </body>
 </html>
