--- a/home.html
+++ b/home.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Creative Visual Design - Home</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/f16c874850.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header class="header">
@@ -45,17 +46,44 @@
         </div>
     </div>
     </section>
+    <section class="hm-services">
+        <div class="container">
+            <div class="hm-services__wrapper">
+                <div class="hm-services__item">
+                    <i class="fa-solid fa-globe"></i>
+                    <h4>Web design and development</h4>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores ratione vitae quaerat beatae doloribus, accusamus sint eos? Placeat doloremque nostrum veniam, voluptatum maiores a delectus provident corrupti nobis ipsa harum.</p>
+                    <a href=""class="btn bg--yellow">Get a Quote</a>
 
+                </div>
+                <div class="hm-services__item">
+                    <i class="fa-sharp fa-solid fa-pen-ruler"></i>
+                    <h4>Grapgic and vector Design</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem quo necessitatibus, repudiandae iure aut rerum nobis sunt cum sit sint, nesciunt eius quisquam perspiciatis distinctio neque quae, laboriosam deleniti qui.</p>
+                    <a href=""class="btn bg--yellow">Get a Quote</a>
+
+                </div>
+                <div class="hm-services__item">
+                    <i class="fa-solid fa-envelopes-bulk"></i>
+                    <h4>Social Media Specialist</h4>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab dolore reprehenderit cumque beatae veniam corrupti, eos dolorum officia doloribus, sapiente quis laboriosam aliquam ea optio velit quia inventore, magnam repellat.</p>
+                    <a href=""class="btn bg--yellow">Get a Quote</a>
+
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="about">
         <div class="container">
             <div class="about__wrapper">
                 <div class="elp">
                     <img class="pic" src="./image/home/Ellipse 1.png">
-                    <img src="./image/home/unsplash_GIy2ly37Kw8.png">
+                    <img class="pic2" src="./image/home/unsplash_GIy2ly37Kw8.png">
                 </div>
                 <div class="about__text">
                     <h3> About Me</h3>
-                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis ullam placeat, nemo consectetur vel ex 
+                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Facilis ullam placeat, nemo consectetur vel ex 
                         earum eius sit adipisci culpa ipsam commodi totam eum 
                         iure aut reprehenderit tempora eaque quis eveniet minima. 
                         Beatae molestiae voluptatem enim explicabo pariatur vitae. Est?</p>
