--- a/home.html
+++ b/home.html
@@ -96,6 +96,61 @@
             </div>     
         </div>
     </section>
+    <section class="trends">
+        <div class="container">
+            <div class="trends__text">
+                <h2>Latest Trends</h2>
+                <p>Latest happenings in virtual space</p>
+            </div>
+            <div class="trends__wrapper">
+                <div class="trends__card">
+                    <img src="./image/home/unsplash_D5nh6mCW52c.png" alt="">
+                    <div class="trends__card_text">
+                        <h4>Designing for a cause</h4>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla molestiae sunt fugit. Velit debitis voluptatibus vitae quam aliquid! Aut nulla itaque rem maxime a beatae quibusdam, quaerat quia eos quos?</p>
+                        <a href="">Read more...</a>
+                    </div>
+                </div>
+                <div class="trends__card">
+                    <img src="./image/home/unsplash_3MAmj1ZKSZA.png" alt="">
+                    <div class="trends__card_text">
+                        <h4>Designing for a cause</h4>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla molestiae sunt fugit. Velit debitis voluptatibus vitae quam aliquid! Aut nulla itaque rem maxime a beatae quibusdam, quaerat quia eos quos?</p>
+                        <a href="">Read more...</a>
+                    </div>
+                </div>
+                <div class="trends__card">
+                    <img src="./image/home/unsplash_3Sf_G9m0gcQ.png" alt="">
+                    <div class="trends__card_text">
+                        <h4>Designing for a cause</h4>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla molestiae sunt fugit. Velit debitis voluptatibus vitae quam aliquid! Aut nulla itaque rem maxime a beatae quibusdam, quaerat quia eos quos?</p>
+                        <a href="">Read more...</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <section class="contact">
+            <div class="container">
+                <div class="contact__wrapper">
+                    <h4>Feel free to talk to us about your projects</h4>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing.</p>
+                    <a href=""class="btn bg--dark">Contact Us</a>
+                </div>
+            </div>
+        </section>
+                <div class="footer">
+                 <div class="container">
+                    <div class="footer__wrapper">
+                        
+                            <li><a href=""><i class="fa-brands fa-facebook"></i><i class="fa-brands fa-twitter"></i><i class="fa-brands fa-instagram"></i><i class="    "></i><i class="fa-solid fa-envelope"></i></a></li>
+                            <p>Brgy Talaga Rizal Laguna 400</p>
+                        </ul><ul>
+                        <div class="footer">
+                            <p>@CreativeVisualDesign</p>
+                 </div>
+                </div>
+            </div>
+        </section>
 <script src="./script.js"></script>
 </body>
 </html>
